Sat Mar  6 15:40:38 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * connectors/dds4ccm/tests/NoModule/NoModule_Connector.mpc:

          Enabled the connector build to excercise Jeff's fix.

Sat Mar  6 07:04:09 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/examples/Hello/Base/Hello.mpc
        * connectors/ami4ccm/examples/Hello/Connector/AMI.mpc
        * connectors/ami4ccm/examples/Hello/Receiver/Hello_Receiver.mpc
        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender.mpc
          Disable for the moment now Jeff is working on TAO_IDL

Sat Mar  6 06:47:09 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds4ccm/tests/SharedDomainParticipant/DifferentDatatype/Base/Base.mpc
        * dds4ccm/tests/SharedDomainParticipant/SameDatatype/Base/Base.mpc
        * dds4ccm/tests/TwoTopicsDifferentNs/Goodbye/HelloGoodbye.mpc
        * dds4ccm/tests/TwoTopicsDifferentNs/Hello/HelloGoodbye.mpc
          Only generate the export file with one idl file

Fri Mar  5 22:06:59 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * MPC/config/dds4ccm_lem_stub.mpb:
        * MPC/config/dds4ccm_stub.mpb:

          New files, reflecting the recent refactoring of CIAO/ccm
          and CIAO/connectors/dds4ccm projects.

        * MPC/config/dds4ccm_skel.mpb:

          Modified to make use of dds4ccm_stub.mpb, described above.

        * connectors/dds4ccm/tests/NoModule/NoModule_Connector.mpc:

          Changes corresponding to the above new base projects.

Fri Mar  5 21:21:03 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * connectors/dds4ccm/tests/NoModule/NoModule_Connector.mpc:

          Another windows fix.

Fri Mar  5 21:11:28 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * connectors/dds4ccm/tests/NoModule/NoModule.mpc:
        * connectors/dds4ccm/tests/NoModule/NoModule_Connector.mpc:

          Some attempted fixes for windows.
