@@ -3,6 +3,10 @@
 
 project(DAnCE_Plan_Launcher_Impl) : dance_lib, dance_logger, dance_convert_plan, \
                             dance_executionmanager_stub, \
+                            dance_domainapplication_stub, \
+                            dance_domainapplicationmanager_stub, \
+                            dance_nodeapplication_stub, \
+                            dance_nodeapplicationmanager_stub, \
                             dance_nodemanager_stub {
   Source_Files {
     EM_Launcher.cpp
